appId: "com.test.petstore"
---
- openLink: exp://127.0.0.1:8081
- assertVisible: "Home"
- tapOn:
    text: "View pet Details"
- assertVisible: "Pet"
- tapOn:
    text: "Logout"
- assertVisible: "Login"
